--- a/SharedElements.css
+++ b/SharedElements.css
@@ -38,7 +38,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	padding-right: 1.0795%;
 	background-color: #00FF66;
 }
-.Block{
+.Block, footer{
 	clear: both;
 	float: left;
 	margin-left: auto;
@@ -48,7 +48,28 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	min-width: 260px;
 	display: block;
 }
-
+footer {
+	background-color: #F0F0F0;
+	padding-bottom: 100px;
+}
+footer .ContactInfo, footer .Credits {
+	margin-left: 0%;
+	width: 80%;
+	margin-bottom: 3%;
+	padding-left: 10%;
+}
+footer .ContactInfo a.Contact {
+	width: 22%;
+	float: left;
+	clear: right;
+	padding: 1.5%;
+}
+footer .ContactInfo a.Contact:hover {
+	width: 24%;
+	float: left;
+	clear: right;
+	padding: 0.5%;
+}
 @media only screen and (min-width: 450px) {
 
 }
@@ -61,18 +82,35 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	padding-left: 0.5681%;
 	padding-right: 0.5681%;
 }
-.Block{
+.Block, footer{
 	clear: none;
 	width: 96.5%;
 	padding: 1.7045%;
 	display: block;
 	margin: 0;
 }
+footer {
+	padding-left: 10%;
+	font-size: 10px
+}
+footer .ContactInfo {
+	padding: 2.5%;
+	width: 20%;
+	float: left;
+}
+footer .Credits {
+	padding: 2.5%;
+	width: 50%;
+	float: left;	
+}
 }
 @media only screen and (min-width: 550px) {
 h2{
 	font-size: 13px;
 }
+
+
+
 }
 @media only screen and (min-width: 650px) {
 h2{
@@ -93,7 +131,7 @@ h2{
 	color: #FFF;
 	margin-left: 10%;
 }
-.Block{
+.Block, footer{
 	clear: none;
 	width: 70%;
 	padding: 10.7045%;
