--- a/Templates/webpage.html
+++ b/Templates/webpage.html
@@ -9,6 +9,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About Prakhar Garg</title>
+<link href="../../SharedElements.css" rel="stylesheet" type="text/css">
 <link href="../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../Projects/EcoCAR/index.css" rel="stylesheet" type="text/css">
 <link href="../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
