--- a/Work/Work.css
+++ b/Work/Work.css
@@ -10,20 +10,34 @@
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 
 @media only screen and (min-width: 481px) {
-.Paragraph{
-	width: 69%;
+.Block {
+	margin-top: 48px;
+}
+.Description {
+	width: 60%;
 	/*clear: right;*/
 	float: left;
 	clear: left;
-	margin-top: 5%;
-	
+	margin-top: 5%;	
+	margin-left: 5%;
 }
+.KSA, .Goals {
+	width: 40%;
+	padding: 5%;
+	float: left;
+	clear: right;
+}
+
 .Image{
 	clear: right;
 	float: right;
 	width: 29%;
 }
-
+.Reflection {
+	margin: 5%;
+	float: left;
+	clear: both;
+}
 }
 
 @media only screen and (min-width: 650px) {
