--- a/Work/Work.css
+++ b/Work/Work.css
@@ -5,16 +5,31 @@
 */
 
 /* Mobile Layout: 480px and below. */
+body {
+	background: #EEEEEE; 
+
+}
+#TopBlock{
+	padding-top: 48px;
+	margin: 0;
+	background: #EEEEEE; 
+	float: left;
+}
+h1 , h3 {
+	margin-left: 5%;
+	margin-right: 5%;
+}
+div{
+	margin: 5%;
+}
 
 
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 
 @media only screen and (min-width: 481px) {
-.Block {
-	margin-top: 48px;
-}
+
 .Description {
-	width: 60%;
+	width: 55%;
 	/*clear: right;*/
 	float: left;
 	clear: left;
@@ -23,7 +38,6 @@
 }
 .KSA, .Goals {
 	width: 40%;
-	padding: 5%;
 	float: left;
 	clear: right;
 }
@@ -32,6 +46,9 @@
 	clear: right;
 	float: right;
 	width: 29%;
+	margin: 0;
+	margin-right: 5%;
+
 }
 .Reflection {
 	margin: 5%;
