--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ h2{
 	padding: 0;
 	margin: 0;
 	min-width: 230px;
-	
+	width: 100%;
 }
 
 .Attribute {
@@ -34,7 +34,8 @@ h2{
 	-0-transition:0.05s;
     transition: 0.05s;
 	display: block;
-	color: #0000FF;
+	color: #000000;
+	text-decoration: none;
 	
 	margin: 2.5%;
 	padding: 2%;
@@ -53,9 +54,14 @@ h2{
 	-webkit-box-shadow: 10px 10px 8px #888888;
 	-moz-box-shadow: 10px 10px 8px #888888;
 	Background: rgba(235,235,235,1);
-
+	color: #000000;
 }
-
+.Contact{
+	width: 30%;
+	float: left;
+	margin: 0.75%;
+	padding: 0.75%;
+}
 .Text {
 	margin-top: 15%;
 }
@@ -82,13 +88,21 @@ h2{
 	}
 #Work {
 	min-height: 100vh;
+	background: #DDD;
+}
+#Work .Attribute {
+	background:rgba(255,255,255,0.5);	
+}
+#Work .Attribute:hover {
+	background:rgba(255,255,255,1);	
 }
 
 #Work .Attribute h2{
 	height: 36px
 }
 #Interest {
-	background: url("InterestMobile.JPG");
+	background: url("InterestDesktop.JPG");
+	background-position: center center;
 	background-size: auto 100%;
 	min-height: 100vh;
 }
@@ -167,14 +181,19 @@ h2{
 	background: rgba(225,225,225,0.5);
 	border-radius: 15px;
 	margin-top: 10vh;
-
 }
 
+#Work .Title {
+	background: rgba(255,255,255,0.5);
 
+}
 .Attribute {
 	background:rgba(225,225,225,0.5);
 }
-
+#Work .Section {
+	width: 80%;
+	margin-left: 10%;
+}
 #Work .Attribute{
 	height: 37%;
 }
@@ -194,6 +213,7 @@ div.Section {
 	clear: none;
 }
 
+
 }
 @media only screen and (min-width: 550px) {
 h2{
@@ -204,6 +224,10 @@ h2{
 h2{
 	font-size: 16px;
 }
+p{
+	font-size: 13px;
+}
+
 }
 
 /* Desktop Layout:*/
