--- a/SharedElements.css
+++ b/SharedElements.css
@@ -30,7 +30,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 */
 
 /* Mobile Layout: 480px and below. */
-
+.Menu {
+	Position: fixed;
+	z-index: 1000;
+	top: 0;
+	left: 0;
+}
 .gridContainer {
 	margin-left: auto;
 	margin-right: auto;
@@ -40,10 +45,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	background-color: #00FF66;
 }
 .Block, footer{
+	position: relative;
 	clear: both;
 	float: left;
 	margin-left: auto;
 	margin-right: auto;
+	padding-top: 5vh;
 	padding-bottom: 3%;
 	width: 100%;
 	min-width: 260px;
