--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ h2{
 	}
 #Work {
 	min-height: 100vh;
-	background: url("WorkBackground.JPG");
+	background: url("WorkBackground.jpg");
 	background-position: center center;
 	background-size: auto 100%;
 	/*background: #DDD;*/
