--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -56,6 +56,7 @@ img, object, embed, video, iframe {
 	clear: both;
 	float: left;
 	margin-left: 0;
+	margin-top: 30px;
 	width: 100%;
 	display: block;
 }
@@ -86,6 +87,7 @@ iframe{
 	padding-right: 3%;
 	margin-left: 3%;
 	margin-bottom: 10px;
+	margin-top: 5vh;
 	display: block;
 }
 .Paragraph{
