--- a/HouseForSale/index.css
+++ b/HouseForSale/index.css
@@ -4,7 +4,7 @@
    http://www.alistapart.com/articles/fluid-images/ 
 */
 img, object, embed, video {
-	width: 90%;
+	width: 100%;
 	alignment-adjust: central;
 }
 /* IE 6 does not support max-width so default to width 100% */
@@ -31,15 +31,47 @@ img, object, embed, video {
 
 /*Time for the CSS*/
 * {margin: 0; padding: 0;}
-body {background: #ccc;}
+body {background: #FFF;}
+
+
+div.Block {
+	width: 100%;
+	margin: 0;
+	background-color: #eff;
+	padding: 1%;
+	overflow: auto;
+	
+}
+
+h1{
+	width: 80%;
+	margin-left: 8%;
+	padding: 3%;
+	display: block;
+	float: left;
+	text-align: center;
+
+}
+.gallery{
+	width: 96%;
+	margin-left: 0;
+	float: left;
+
+}
+p.intro{
+	margin-top: 20px;
+	width: 96%;
+	float: left;
+
+}
 
 .slider{
-	width: 100%; /*Same as width of the large image*/
+	width: 90%; /*Same as width of the large image*/
 	position: relative;
 	/*Instead of height we will use padding*/
-	padding-top: 320px; /*That helps bring the labels down*/
-	
-	margin: 100px auto;
+	padding-top: 67%; /*That helps bring the labels down*/
+	margin-left: 5%;
+	margin: 5px auto;
 	
 	/*Lets add a shadow*/
 	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.75);
@@ -50,7 +82,7 @@ body {background: #ccc;}
 .slider>img{
 	position: absolute;
 	left: 0; top: 0;
-	transition: all 0.5s;
+	transition: all 0.25s;
 }
 
 .slider input[name='slide_switch'] {
@@ -59,13 +91,12 @@ body {background: #ccc;}
 
 .slider label {
 	/*Lets add some spacing for the thumbnails*/
-	width: 18%;
-	margin: 18px 0 0 18px;
-	border: 3px solid #999;
+	width: 17%;
+	margin: 18px 0 0 2.5%;
 	
 	float: left;
 	cursor: pointer;
-	transition: all 0.5s;
+	transition: all 0.25s;
 	
 	/*Default style = low opacity*/
 	opacity: 0.6;
@@ -93,72 +124,41 @@ On click the images will be displayed at normal size to complete the effect
 	opacity: 1;
 	transform: scale(1);
 }
-/*Clicking on any thumbnail now should activate the image related to it*/
-
-/*We are done :)*/
 
 
-
-
-
-
-
-
-div.Block {
-	width: 98%;
-	margin: 1%;
-	background-color: #eff;
-	padding: 1%;
-	
-}
-
-h1{
-	width: 100%;
-	padding: 3%;
-	text-align: center;
-	
-}
-object.Photos{
-	
-	 width=100%;
-	 height=300pt;
-	 margin-left: 5%;
-}
-ul.Photos{
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	font-size: 100%;
-	cursor: default;
-	width: auto;
-}
-ul.Photos li{
-	margin: 0px;
-	padding: 0px;
-	border-color: #000;
-	list-style-type: none;
-	position: relative;
-	text-align: center;
-	width: 33%;
-	float: left;
-	color: #00C;
-}
 
 
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 
 @media only screen and (min-width: 481px) {
-
-
+}
 
 @media only screen and (min-width: 650px) {
+div.Block{
+	width: 95%;
+	margin-left: 2%;
+}
+h1{
+	display: block;
+	height: 10%;
+}
+.gallery{
+	width: 40%;
+	float: left;
+
+}
+p.intro{
+	width: 55%;
+	float: left;
+}
 }
 
 /* Desktop Layout: 769px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout. */
 
 @media only screen and (min-width: 769px) {
-
-
+div.Block{
+	width: 760px;
+}
 }
 
 /* when the screen size is wayy too big */
