--- a/HouseForSale/index.css
+++ b/HouseForSale/index.css
@@ -52,6 +52,38 @@ h1{
 	text-align: center;
 
 }
+h2{
+	display: block;
+	float: left;
+	clear: all;
+	width: 100%;
+	margin: 20px 0 5px 0;
+	padding-left: 10%;
+	background-color: rgba(3,3,3,0.1);
+}
+table{
+	width: 98%;
+	float: left;
+}
+
+td{
+	width: 25%;
+}
+
+.Asking{
+	width: 98%;
+	text-align: right;
+}
+
+td.property{
+	font-weight: bold;
+	text-align: left;
+}
+.details td{
+	width: 16.6%;
+a}
+
+
 .gallery{
 	width: 96%;
 	margin-left: 0;
@@ -126,8 +158,6 @@ On click the images will be displayed at normal size to complete the effect
 }
 
 
-
-
 /* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */
 
 @media only screen and (min-width: 481px) {
@@ -142,6 +172,7 @@ h1{
 	display: block;
 	height: 10%;
 }
+
 .gallery{
 	width: 40%;
 	float: left;
@@ -151,6 +182,17 @@ p.intro{
 	width: 55%;
 	float: left;
 }
+.Asking{
+	width: 55%;
+	float: left;
+	text-align: right;
+}
+.about{
+	width: 55%;
+	float: left;
+}
+
+
 }
 
 /* Desktop Layout: 769px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout. */
