--- a/NewSite/gridcontainer.css
+++ b/NewSite/gridcontainer.css
@@ -1,3 +1,6 @@
+#Education .grid-container {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 #Work .grid-container {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
@@ -26,10 +29,9 @@
 }
 
 .grid-container a {
-  /* background-color: rgba(255, 255, 255, 0.8); */
+   background-color: rgba(0, 0, 0, 0.1); 
   text-align: center;
   padding: 20px 0;
-  font-size: 30px;
   position: relative;
   padding: 0;
   display: flex;
@@ -47,19 +49,23 @@
   
 }
 .grid-container h2{
-  font-size: 0.5em;
-  top:0.3em;
-  left: 0;
+  font-size: 1em;
+  bottom:0.5em;
+  right: 0;
+  position: absolute;
 }
-.grid-container h3{
-  font-size: 0.4em;
-  top: 2em;
-  left: 0;
+.grid-container ul{
+  font-size: 0.75em;
+  position: relative;
+  list-style: none;
+  text-align: left;
+  display: none;
 }
 @charset "utf-8";
 
 
 .grid-container img{
+  position: absolute;
   top:0;
   left: 0;
   width: 100%;
@@ -68,22 +74,40 @@
 
 
 .grid-container .details{
+  /* background-color: rgba(0,0,0,1); */
+  background-image: linear-gradient(rgba(50,50,50,0) 15%, rgba(25,25,25,1) 90%);
+  text-align: center;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: #FFFFFF;
+  size: 30px;
+}
+
+.grid-container .details{
   display: none;
 }
 
 .grid-container > a:hover .details{
   display: block;
-  background-color: rgba(255, 255, 255, 1);
-  text-align: center;
-  padding: 0;
-  width: 100%;
-  max-height: 100%;
-  border: 0;
 }
+/*
 .grid-container > a:hover img{
-  display: none;
+  position: absolute;
+  top: 75%;
+  left: -25%;
+  width: 25%;
+  height: 25%;
 }
-
+*/
+.priority1 {
+  grid-row: span 1;
+  grid-column: span 1; 
+}
 .priority2 {
   grid-row: span 2;
   grid-column: span 2; 
