--- a/NewSite/gridcontainer.css
+++ b/NewSite/gridcontainer.css
@@ -4,7 +4,8 @@
 .grid-container {
   display: grid;
   grid-gap: 10px;
-  background-color: #2196F3;
+  /* background-color: #2196F3; */
+  background-color: rgba(200,200,200,0.75);
   padding: 10px;
   grid-auto-flow: row dense;
   grid-auto-rows: 1fr;
