--- a/NewSite/fluid.css
+++ b/NewSite/fluid.css
@@ -22,6 +22,7 @@
 		 margin: 0;
 		 padding: 0;
 		 padding-top: 15vh;
+		 padding-bottom: 5vh;
 		 position: relative;
 	 }
 	 .Block .Title {
@@ -84,6 +85,7 @@
 		 padding-left: 15vh;
 		 position: relative;
 		 padding-top: 15vh;
+		 padding-bottom: 5vh;
 	 }
 	 .Block .Title {
 		 width: 448px;
@@ -95,7 +97,7 @@
 	 }
 	 .Block .grid-container{
 		 width: 832px;
-		 margin: 5vh 5% 5% auto;
+		 margin: 5vh 5% 0% auto;
 		 
 	 }
 }
@@ -127,6 +129,7 @@
 		 padding: 0;
 		 position: static;
 		 padding-top: 10%;
+		 padding-bottom: 10%;
 	 }
 	 .Block .Title {
 		 width: 75%;
@@ -140,7 +143,7 @@
 		 margin: 0;
 		 position: static;
 		 width: 85%;
-		 margin: 0px 7% 7% 7%;
+		 margin: 0px 7% 0% 7%;
 		 right: 5%;
 		 top: 30vh;
 	 }
@@ -148,14 +151,14 @@
 		 margin: 0;
 		 position: static;
 		 width: 85%;
-		 margin: 0px 7% 7% 7%;
+		 margin: 0px 7% 0% 7%;
 		 right: 5%;
 		 top: 30vh;
 		 grid-template-columns: 1fr 1fr 1fr 1fr;
 	 }
 	 
 	#Education .grid-container{
-		margin: 50px 7% 7% 7%;
+		margin: 50px 7% 0% 7%;
 	}
 	 
 	#Education .priority2 {
@@ -164,7 +167,7 @@
 	}
 	 
 	#Work .grid-container{
-		margin: 50px 7% 7% 7%;
+		margin: 50px 7% 0% 7%;
 	}
 	
 	#Projects-show-more-button {
