--- a/NewSite/templates/work.html
+++ b/NewSite/templates/work.html
@@ -43,10 +43,7 @@
 		<div class="container">
 	    	<h2>Job Description</h2>
 			<ul>
-<li>Assisted GDMS’s Block 3 team on the CP-140 Aurora project.</li>
-<li>Developed a tool to relay automated test results and sprint summary to the team.</li>
-<li>Researched and implemented attitude interpolation algorithm to reduce bandwidth usage.</li>
-<li>Wrote automated test to verify LRF altitude measurements from the MX-20 using Robot Framework and Python. </li>
+				<li></li>
 			</ul>
 		</div>
 	</div>
@@ -56,20 +53,16 @@
 		    <div class="col-sm">
 				<h2>Knowledge, Skills and Abillities</h2>
 				<ul>
-					<li>Robot Framework</li>
-					<li>ADA</li>
-					<li>Interporation</li>
-					<li>Web Development</li>
+					<li></li>
 				</ul>
 				<h2>Goals, Success Factors</h2>
 				<ul>
-					<li>Deliver an easy to read dashboard</li>
-					<li>Assist develop succesful test algorithms</li>
+					<li></li>
 				</ul>
 		    </div>
 		    <div class="col-sm-4">
 				<div  class="grid-container container" id="Images-grid-container">
-					<img class="priority1 hiddenfalse" src="Logo.gif">
+					<img class="priority1 hiddenfalse" src="">
 				</div>
 		    </div>
 		  </div>
@@ -77,7 +70,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p>Working at THALS was an amazing experience. Working in the Research and Development department, I have learned a lot about how large firms begin new software projects and what goes into mintaining prexisting software.</p>
+		<p></p>
 	</div>
 	
 </body>
