--- a/NewSite/adjustments.css
+++ b/NewSite/adjustments.css
@@ -60,6 +60,7 @@
 		right: 2rem;
 		top: 45vh;
     	font-size: 5em;
+    	z-index: 1;
 	}
 	.carousel-indicators {
 		top: 0;
@@ -118,6 +119,10 @@
 		padding: none;
 		margin: none;
 	}
+	#Bottom{
+		padding-top: 5%;
+		padding-bottom: 5%;
+	}
 }
  
 @media all and (max-width: 1280px) {
@@ -175,5 +180,29 @@
 }
 
 @media all and (max-width: 480px) {
-
+	#AboutMeSeperator h1{
+    	font-size: 2em;
+    	top:25vh;
+    }
+	#AboutMeText{
+    	padding-bottom: 20%;
+    }
+    #Projects {
+    	padding-top: 10%;
+    	padding-bottom: 20%;
+    }
+	#Work{
+		background-color: #1c1c1c; 
+		padding-top: 20%;
+		padding-bottom: 25%;
+	    clip-path: polygon(0 0, 50% 5%, 100% 0, 100% 100%, 50% 100%, 0 100%);
+	}
+	#Work-Interests {
+		position: static;
+	}
+	#Work-Interests svg {
+		width: 100%;
+		height: 150px;
+		bottom: 150px;
+	}
 }
