--- a/NewSite/gridcontainer.css
+++ b/NewSite/gridcontainer.css
@@ -71,7 +71,8 @@
     top:0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 1);
+    background: none;
+  /*  background-color: rgba(255, 255, 255, 1);*/
   }
 
 
