oldest project pages updated

--- a/templates/project.html
+++ b/templates/project.html
@@ -34,15 +34,12 @@
 
 <body onload=' addMenubar();'>
 	<div name="" class="container-fluid jumbotron" id="Intro">
-		<h1 id="jobtitle">Modern Mobility</h1>
-		<p class="lead float-right" id="date">2017-2018</p>
-		<p class="lead" id="company">McMaster University Engineering Capstone</p>
+		<h1 id="jobtitle">McMaster EcoCar 3</h1>
+		<p class="lead float-right" id="date">2013-2014</p>
+		<p class="lead" id="company">McMaster University</p>
 		<div class="container">
 	    	<h2>Project Description</h2>
-			<p></p>
-			<ol>
-				<li></li>
-			</ol>
+			<p><a href="http://ecocar3.org/">EcoCAR 3</a> is the latest in the U.S. Department of Energy (DOE) Advanced Vehicle Technology Competition (AVTC) series.  AVTC represents a unique collaboration between government, industry, and academic partners who combine resources to explore sustainable transportation solutions. Sixteen North American Universities have been challenged to re-engineer a Chevrolet Camaro into a hybrid-electric vehicle over a course of 4 years.</p>
 		</div>
 	</div>
 
@@ -51,30 +48,31 @@
 		  <div class="row">
 		  	<div class="col-sm">
 		  		<h2>My Role</h2>
-		  		<p></p>
+		  		<p>This project has many different roles, as each team is required to design, simulate, modify and test the vehicle power-trains. For the year I was involved with the low level software development of the car. I have helped program new functionality and in the process learned a lot about the development process of the car. During the year I have been able to apply my knowledge in C# to programming Freescale processors to execute certain tasks. Before writing the code my team and I were required to create appropriate documentation. We created Interface specifications and test scenarios to validate the logic before compiling the code. This allowed me to apply my knowledge about the software development process and create appropriate documentation before constructing efficient code.</p>
 		  	</div>
 		  	<div class="col-sm">
-		  		<img width="100%" class="priority1 hiddenfalse" src="">
+		  		<img src="10314570_791737187547731_7611673542938501951_n.jpg" width="100%">
 		  	</div>
 		  </div>
 		  <div class="row">
 		    <div class="col-sm">
-				<video width="100%" controls>
-				  <source src="" type="video/mp4">
-				  Your browser does not support HTML video.
-				</video>
+				<img src="freescale.png" width="100%">
 		    </div>
 		    <div class="col-sm">
 		    	<div id="ksa">
 					<h2>Knowledge, Skills and Abillities</h2>
 					<ul>
-						<li></li>
+						<li>Low Level Programming</li>
+						<li>C#</li>
+						<li>Matlab/Simulink</li>
+						<li>PCB Debugging</li>
 					</ul>
 				</div>
 				<div id="gsf">
 					<h2>Goals, Success Factors</h2>
 					<ul>
-						<li></li>
+						<li>Programming the control board for a custom thermoelectric generator.</li>
+						<li>Design Hiuman Machine Interface mount for car</li>
 					</ul>
 				</div>
 		    </div>
@@ -83,14 +81,11 @@
 		  	<div class="col-sm">
 		  		<h2>Challenges</h2>
 		  		<ul>
-		  			<li></li>
+		  			<li>This project required a very steep learning curve.</li>
 		  		</ul>
 		  	</div>
 		  	<div class="col-sm">
-				<video width="100%" controls>
-				  <source src="" type="video/mp4">
-				  Your browser does not support HTML video.
-				</video>
+				<img width="100%" src="EcoCAR3Camaro.jpg">
 		  	</div>
 
 		  </div>
@@ -98,7 +93,7 @@
 	</div>
 	<div name="" class="container" id="Reflection">
 		<h2>Reflection</h2>
-		<p></p>
+		<p>As amazing at this porject was I left like I was very underprepared for my role. As a second year student I knew very little so spent most of my life learning about CAN and I2C among other things. THis was an amazing learning experience adn the organization of the team greatly impacted how i managed future projects.</p>
 	</div>
 	
 </body>
