--- a/Interests/Photography/gallery.css
+++ b/Interests/Photography/gallery.css
@@ -1,15 +1,15 @@
-@media all {
+
+  @charset "utf-8";
+
+  @media all {
 
   .gallery {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     display: grid;
     grid-gap: 10px;
     padding: 10px;
     grid-auto-flow: row dense;
     grid-auto-rows: 1fr;
-  }
-  .gallery img{
-    width: 100%;
-    height: 100%;
   }
 
   .gallery .block:before {
@@ -22,107 +22,40 @@
     display: block;
     padding-top: 50%;
   }
-  .gallery .block.portrait:before {
+/*  .gallery .block.portrait:before {
     content: "";
     display: block;
     padding-top: 200%;
   }
-
-  .show-more-button, .show-less-button {
-    background-color: rgba(0, 0, 0, 0.1); 
-    text-align: center;
-    padding: 20px 0;
-    position: relative;
-    padding: 0;
-  }
-
-
+*/
   .gallery .block {
     background-color: rgba(0, 0, 0, 0.1); 
     text-align: center;
-    padding: 20px 0;
     position: relative;
     padding: 0;
+    width: 100%
   }
 
-  .hiddentrue{
-  	display: none;
-  }
-  .hiddenfalse{
-  	display: flex;
-  }
 
-  .gallery img, .gallery h2, .gallery h3 {
-    border: none;
-    padding : 0;
-    margin: 0;
-    min-width: 100%;
-    display: block;
-    position: inherit;
-    align: center;
-    
-  }
-  .gallery h2{
-    font-size: 1em;
-    bottom:0.5em;
-    right: 0;
-    position: absolute;
-  }
-  .gallery ul{
-    font-size: 0.75em;
-    position: relative;
-    list-style: none;
-    text-align: left;
-    display: none;
-  }
-  @charset "utf-8";
-
-
-  .gallery img{
-    position: absolute;
+  .gallery .block img{
     top:0;
     left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    height: 100%;
     width: 100%;
     background: none;
-  /*  background-color: rgba(255, 255, 255, 1);*/
-  }
-
-
-  .gallery .details{
-    /* background-color: rgba(0,0,0,1); */
-    background-image: linear-gradient(rgba(50,50,50,0) 15%, rgba(25,25,25,1) 90%);
-    text-align: center;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+    border: none;
     position: absolute;
-    left: 0;
-    bottom: 0;
-    color: #FFFFFF;
-    size: 30px;
+    align: center;
+    object-fit: cover;
+    object-position: 50%,50%;
   }
-
-  .gallery .details{
-    display: none;
-  }
-
-  .gallery > .block:hover .details{
-    display: block;
-  }
-  /*
-  .gallery > a:hover img{
-    position: absolute;
-    top: 75%;
-    left: -25%;
-    width: 25%;
-    height: 25%;
-  }
-  */
+  
   .priority1.landscape{
     grid-row: span 1;
     grid-column: span 2; 
-  }
+  } 
   .priority2.landscape{
     grid-row: span 2;
     grid-column: span 4; 
@@ -154,21 +87,6 @@
   .priority3 {
     grid-row: span 3;
     grid-column: span 3; 
-  }
-  .educationquote{
-    grid-column: span 3;
-    align-self: end;
-    margin-bottom: 0 !important;
-  }
-
-  .educationquote .quote {
-    font-family: Zapf-Chancery;
-
-  }
-  .item3 {
-    grid-row: span 3;
-    grid-column: span 3;
-    
   }
 }
 
