removed newsite form domain

--- a/templates/work.html
+++ b/templates/work.html
@@ -16,20 +16,20 @@
 	<title>Prakhar Garg | About Me</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="http://prakhargarg.me/NewSite/assets/data/sitemap.js"></script>
-	<script src="http://prakhargarg.me/NewSite/assets/js/dividers.js"></script>
+	<script src="http://prakhargarg.me/assets/data/sitemap.js"></script>
+	<script src="http://prakhargarg.me/assets/js/dividers.js"></script>
 
 
 	<!-- Building the site -->
-	<script src="http://prakhargarg.me/NewSite/HorizontalMenuBar/index.js"></script>
-	<script src="http://prakhargarg.me/NewSite/populate.js"></script>
+	<script src="http://prakhargarg.me/HorizontalMenuBar/index.js"></script>
+	<script src="http://prakhargarg.me/populate.js"></script>
 
 	<!-- Event Handlers -->
 
 	<!-- Styling -->
-	<link href="http://prakhargarg.me/NewSite/gridcontainer.css" rel="stylesheet" type="text/css">
-	<link href="http://prakhargarg.me/NewSite/bootstrap.css" rel="stylesheet" type="text/css">
-	<script src="http://prakhargarg.me/NewSite/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
+	<link href="http://prakhargarg.me/gridcontainer.css" rel="stylesheet" type="text/css">
+	<link href="http://prakhargarg.me/bootstrap.css" rel="stylesheet" type="text/css">
+	<script src="http://prakhargarg.me/bootstrap-4.5.0-dist/js/bootstrap.js"></script>
 
 </head>
 
