--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -103,6 +103,41 @@
     grid-auto-flow: row dense;
     grid-auto-rows: 1fr;
   }
+  .gallery .block:before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+  }  
+  .gallery .block.landscape:before {
+    content: "";
+    display: block;
+    padding-top: 50%;
+  }
+
+  .gallery .block {
+    background-color: rgba(0, 0, 0, 0.1); 
+    text-align: center;
+    position: relative;
+    padding: 0;
+    width: 100%
+  }
+
+
+  .gallery .block img{
+    top:0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    height: 100%;
+    width: 100%;
+    background: none;
+    border: none;
+    position: absolute;
+    align: center;
+    object-fit: cover;
+    object-position: 50%,50%;
+  }
+  
   .gallery .details{
     display: block;
     height: 30px;
